Adding CSS layouts

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "Bookmarklets",
         "Cheatsheets",
         "Codecademy",
+        "Codrops",
         "Flavio",
         "Photopea",
         "Scrimba",
