Add CSS Coding games

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,14 @@
 {
     "cSpell.words": [
         "Bookmarklets",
+        "Bykov",
         "Cheatsheets",
         "Codecademy",
         "Codrops",
+        "Dmitrii",
+        "Drasner",
         "Flavio",
+        "Leniolabs",
         "Photopea",
         "Scrimba",
         "Treehouse",
