more coding games

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,8 @@
     "cSpell.words": [
         "Bookmarklets",
         "Bykov",
+        "CODEWARS",
+        "CRYPTOHACK",
         "Cheatsheets",
         "Codecademy",
         "Codrops",
@@ -13,6 +15,7 @@
         "Scrimba",
         "Treehouse",
         "Visualisation",
+        "cheatsheet",
         "eventlistener",
         "moduleformat",
         "usestrict"
